<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SelectActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textColor="@color/colorTextPrimary"
        android:textSize="24dp"
        tools:ignore="GridLayout"
     />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/typeTriangle"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorTextPrimary"
        />
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="169dp"
        android:layout_height="151dp"
        android:layout_marginBottom="20dp"
        android:onClick="openTriangle"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/triangle" />
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/speedconverter"
       android:textSize="20dp"
       android:gravity="center"
       android:layout_marginTop="10dp"
       android:layout_marginBottom="10dp"

       android:textColor="@color/colorTextPrimary"
       />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="openSpeed"
        app:srcCompat="@drawable/speedicon" />


</LinearLayout>