<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TriangleActivity"
    android:orientation="vertical"
    android:background="@color/colorDivider">

    <TextView
        android:id="@+id/titleTriangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/triangle"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:textColor="@color/colorTextPrimary"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/side"
            android:textSize="20dp"
            android:layout_gravity=""
            android:textColor="@color/colorTextPrimary"
            />

        <EditText
            android:id="@+id/sideA"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(m)"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/side"
            android:textSize="20dp"
            android:layout_gravity=""
            android:textColor="@color/colorTextPrimary"
            />

        <EditText
            android:id="@+id/sideB"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(m)"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/calc"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:onClick="checkTriangle"
            android:text="@string/check" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/side"
            android:textSize="20dp"
            android:layout_gravity=""
            android:textColor="@color/colorTextPrimary"
            />

        <EditText
            android:id="@+id/sideC"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(m)"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="150dp"
            android:text="@string/type"
            android:textColor="@color/colorTextPrimary"
            android:textSize="35dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/realLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="86dp"
            app:srcCompat="@drawable/triangle" />

        <TextView
            android:id="@+id/triangleType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="95dp"
            android:text="@string/type"
            android:textColor="@color/colorAccent"
            android:textSize="30dp"
            tools:ignore="RtlCompat" />

    </RelativeLayout>



</LinearLayout>